--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -1773,42 +1773,6 @@ keywords = "Survey "
  keywords = {end-user programming, mashups, programming by example, web data extraction},
 }
 
-@inproceedings{Wong2007,
- author = {Wong, Jeffrey and Hong, Jason I.},
- title = {Making Mashups with Marmite: Towards End-user Programming for the Web},
- booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
- series = {CHI '07},
- year = {2007},
- isbn = {978-1-59593-593-9},
- location = {San Jose, California, USA},
- pages = {1435--1444},
- numpages = {10},
- url = {http://doi.acm.org/10.1145/1240624.1240842},
- doi = {10.1145/1240624.1240842},
- acmid = {1240842},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {end-user programming, mashup, spreadsheet, web services},
-}
-
-@inproceedings{Lin2009,
- author = {Lin, James and Wong, Jeffrey and Nichols, Jeffrey and Cypher, Allen and Lau, Tessa A.},
- title = {End-user Programming of Mashups with Vegemite},
- booktitle = {Proceedings of the 14th International Conference on Intelligent User Interfaces},
- series = {IUI '09},
- year = {2009},
- isbn = {978-1-60558-168-2},
- location = {Sanibel Island, Florida, USA},
- pages = {97--106},
- numpages = {10},
- url = {http://doi.acm.org/10.1145/1502650.1502667},
- doi = {10.1145/1502650.1502667},
- acmid = {1502667},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {automation, data integration, end-user programming, mashup, programming by demonstration, web},
-}
-
 @book{Okasaki1998,
  author = {Okasaki, Chris},
  title = {Purely Functional Data Structures},
@@ -2040,3 +2004,326 @@ keywords = "Survey "
   year = 2013,
   month = Jan,
 }
+
+@inproceedings{Klokmose2015,
+ author = {Klokmose, Clemens N. and Eagan, James R. and Baader, Siemen and Mackay, Wendy and Beaudouin-Lafon, Michel},
+ title = {Webstrates: Shareable Dynamic Media},
+ booktitle = {Proceedings of the 28th Annual ACM Symposium on User Interface Software \&\#38; Technology},
+ series = {UIST '15},
+ year = {2015},
+ isbn = {978-1-4503-3779-3},
+ location = {Charlotte, NC, USA},
+ pages = {280--290},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/2807442.2807446},
+ doi = {10.1145/2807442.2807446},
+ acmid = {2807446},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {dynamic media, real-time collaborative documents, web},
+}
+
+@inproceedings{Radle2017,
+ author = {R\"{a}dle, Roman and Nouwens, Midas and Antonsen, Kristian and Eagan, James R. and Klokmose, Clemens N.},
+ title = {Codestrates: Literate Computing with Webstrates},
+ booktitle = {Proceedings of the 30th Annual ACM Symposium on User Interface Software and Technology},
+ series = {UIST '17},
+ year = {2017},
+ isbn = {978-1-4503-4981-9},
+ location = {Qu\&\#233;bec City, QC, Canada},
+ pages = {715--725},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/3126594.3126642},
+ doi = {10.1145/3126594.3126642},
+ acmid = {3126642},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {interactive notebooks, literate computing, literate programming, real-time collaboration, reprogrammable systems},
+}
+
+@inproceedings{Wightman2012,
+ author = {Wightman, Doug and Ye, Zi and Brandt, Joel and Vertegaal, Roel},
+ title = {SnipMatch: Using Source Code Context to Enhance Snippet Retrieval and Parameterization},
+ booktitle = {Proceedings of the 25th Annual ACM Symposium on User Interface Software and Technology},
+ series = {UIST '12},
+ year = {2012},
+ isbn = {978-1-4503-1580-7},
+ location = {Cambridge, Massachusetts, USA},
+ pages = {219--228},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2380116.2380145},
+ doi = {10.1145/2380116.2380145},
+ acmid = {2380145},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {example-centric development, natural language processing, prototyping},
+}
+
+@inproceedings{Oney2012,
+ author = {Oney, Stephen and Brandt, Joel},
+ title = {Codelets: Linking Interactive Documentation and Example Code in the Editor},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '12},
+ year = {2012},
+ isbn = {978-1-4503-1015-4},
+ location = {Austin, Texas, USA},
+ pages = {2697--2706},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2207676.2208664},
+ doi = {10.1145/2207676.2208664},
+ acmid = {2208664},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {documentation, example, programming, structured editing},
+}
+
+
+@misc{Glitch,
+  title = {Glitch is the friendly community where you'll build the app
+  of your dreams},
+  howpublished = {\url{https://glitch.com/about/}},
+  year = 2017,
+}
+
+@misc{HyperCard,
+  author = {Lasar, Matthew},
+  title = {25 years of {HyperCard}---the missing link to the Web},
+  howpublished = {\url{https://arstechnica.com/gadgets/2012/05/25-years-of-hypercard-the-missing-link-to-the-web/}},
+  year = 2012,
+}
+
+@inproceedings{Deka2017,
+ author = {Deka, Biplab and Huang, Zifeng and Franzen, Chad and Nichols, Jeffrey and Li, Yang and Kumar, Ranjitha},
+ title = {ZIPT: Zero-Integration Performance Testing of Mobile App Designs},
+ booktitle = {Proceedings of the 30th Annual ACM Symposium on User Interface Software and Technology},
+ series = {UIST '17},
+ year = {2017},
+ isbn = {978-1-4503-4981-9},
+ location = {Qu\&\#233;bec City, QC, Canada},
+ pages = {727--736},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/3126594.3126647},
+ doi = {10.1145/3126594.3126647},
+ acmid = {3126647},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {app design, design support tools, zero-integration performance testing},
+}
+
+@inproceedings{Hartmann2007,
+ author = {Hartmann, Bj\"{o}rn and Wu, Leslie and Collins, Kevin and Klemmer, Scott R.},
+ title = {Programming by a Sample: Rapidly Creating Web Applications with D.Mix},
+ booktitle = {Proceedings of the 20th Annual ACM Symposium on User Interface Software and Technology},
+ series = {UIST '07},
+ year = {2007},
+ isbn = {978-1-59593-679-0},
+ location = {Newport, Rhode Island, USA},
+ pages = {241--250},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1294211.1294254},
+ doi = {10.1145/1294211.1294254},
+ acmid = {1294254},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {mashups, programming by example modification, prototyping, web services},
+}
+
+@inproceedings{ZhangUIST2017,
+ author = {Zhang, Xiong and Guo, Philip J.},
+ title = {DS.Js: Turn Any Webpage into an Example-Centric Live Programming Environment for Learning Data Science},
+ booktitle = {Proceedings of the 30th Annual ACM Symposium on User Interface Software and Technology},
+ series = {UIST '17},
+ year = {2017},
+ isbn = {978-1-4503-4981-9},
+ location = {Qu\&\#233;bec City, QC, Canada},
+ pages = {691--702},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/3126594.3126663},
+ doi = {10.1145/3126594.3126663},
+ acmid = {3126663},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {data science, live programming, novice programmers},
+}
+
+@inproceedings{MysoreUIST2017,
+ author = {Mysore, Alok and Guo, Philip J.},
+ title = {Torta: Generating Mixed-Media GUI and Command-Line App Tutorials Using Operating-System-Wide Activity Tracing},
+ booktitle = {Proceedings of the 30th Annual ACM Symposium on User Interface Software and Technology},
+ series = {UIST '17},
+ year = {2017},
+ isbn = {978-1-4503-4981-9},
+ location = {Qu\&\#233;bec City, QC, Canada},
+ pages = {703--714},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/3126594.3126628},
+ doi = {10.1145/3126594.3126628},
+ acmid = {3126628},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {mixed-media tutorials, software tutorials, tutorial generation},
+}
+
+@inproceedings{Fujima2004,
+ author = {Fujima, Jun and Lunzer, Aran and Hornb{\ae}k, Kasper and Tanaka, Yuzuru},
+ title = {Clip, Connect, Clone: Combining Application Elements to Build Custom Interfaces for Information Access},
+ booktitle = {Proceedings of the 17th Annual ACM Symposium on User Interface Software and Technology},
+ series = {UIST '04},
+ year = {2004},
+ isbn = {1-58113-957-8},
+ location = {Santa Fe, NM, USA},
+ pages = {175--184},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1029632.1029664},
+ doi = {10.1145/1029632.1029664},
+ acmid = {1029664},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {customized information access, end-user programming, parallel exploration},
+}
+
+@inproceedings{Lin2009,
+ author = {Lin, James and Wong, Jeffrey and Nichols, Jeffrey and Cypher, Allen and Lau, Tessa A.},
+ title = {End-user Programming of Mashups with Vegemite},
+ booktitle = {Proceedings of the 14th International Conference on Intelligent User Interfaces},
+ series = {IUI '09},
+ year = {2009},
+ isbn = {978-1-60558-168-2},
+ location = {Sanibel Island, Florida, USA},
+ pages = {97--106},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1502650.1502667},
+ doi = {10.1145/1502650.1502667},
+ acmid = {1502667},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {automation, data integration, end-user programming, mashup, programming by demonstration, web},
+}
+
+@inproceedings{Wong2007,
+ author = {Wong, Jeffrey and Hong, Jason I.},
+ title = {Making Mashups with Marmite: Towards End-user Programming for the Web},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '07},
+ year = {2007},
+ isbn = {978-1-59593-593-9},
+ location = {San Jose, California, USA},
+ pages = {1435--1444},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1240624.1240842},
+ doi = {10.1145/1240624.1240842},
+ acmid = {1240842},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {end-user programming, mashup, spreadsheet, web services},
+}
+
+@inproceedings{Ennals2007,
+ author = {Ennals, Rob and Gay, David},
+ title = {User-friendly Functional Programming for Web Mashups},
+ booktitle = {Proceedings of the 12th ACM SIGPLAN International Conference on Functional Programming},
+ series = {ICFP '07},
+ year = {2007},
+ isbn = {978-1-59593-815-2},
+ location = {Freiburg, Germany},
+ pages = {223--234},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1291151.1291187},
+ doi = {10.1145/1291151.1291187},
+ acmid = {1291187},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {browser, end-used programming, mashup, web},
+}
+
+@inproceedings{schraefel2002,
+ author = {schraefel, M. C. and Zhu, Yuxiang and Modjeska, David and Wigdor, Daniel and Zhao, Shengdong},
+ title = {Hunter Gatherer: Interaction Support for the Creation and Management of Within-web-page Collections},
+ booktitle = {Proceedings of the 11th International Conference on World Wide Web},
+ series = {WWW '02},
+ year = {2002},
+ isbn = {1-58113-449-5},
+ location = {Honolulu, Hawaii, USA},
+ pages = {172--181},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/511446.511469},
+ doi = {10.1145/511446.511469},
+ acmid = {511469},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {attention, collections, information gathering and management, transclusions, web-based interaction design},
+}
+
+@inproceedings{Pham2012,
+ author = {Pham, Hubert and Mazzola Paluska, Justin and Miller, Rob and Ward, Steve},
+ title = {Clui: A Platform for Handles to Rich Objects},
+ booktitle = {Proceedings of the 25th Annual ACM Symposium on User Interface Software and Technology},
+ series = {UIST '12},
+ year = {2012},
+ isbn = {978-1-4503-1580-7},
+ location = {Cambridge, Massachusetts, USA},
+ pages = {177--188},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2380116.2380141},
+ doi = {10.1145/2380116.2380141},
+ acmid = {2380141},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {cloud, handles, semantic web},
+}
+
+@inproceedings{Swearngin2017,
+ author = {Swearngin, Amanda and Ko, Andrew J. and Fogarty, James},
+ title = {Genie: Input Retargeting on the Web Through Command Reverse Engineering},
+ booktitle = {Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems},
+ series = {CHI '17},
+ year = {2017},
+ isbn = {978-1-4503-4655-9},
+ location = {Denver, Colorado, USA},
+ pages = {4703--4714},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/3025453.3025506},
+ doi = {10.1145/3025453.3025506},
+ acmid = {3025506},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {program analysis, reverse engineering, web applications},
+}
+
+@article{Resnick2009,
+ author = {Resnick, Mitchel and Maloney, John and Monroy-Hern\'{a}ndez, Andr{\'e}s and Rusk, Natalie and Eastmond, Evelyn and Brennan, Karen and Millner, Amon and Rosenbaum, Eric and Silver, Jay and Silverman, Brian and Kafai, Yasmin},
+ title = {Scratch: Programming for All},
+ journal = {Commun. ACM},
+ issue_date = {November 2009},
+ volume = {52},
+ number = {11},
+ month = nov,
+ year = {2009},
+ issn = {0001-0782},
+ pages = {60--67},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1592761.1592779},
+ doi = {10.1145/1592761.1592779},
+ acmid = {1592779},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@inproceedings{Leshed2008,
+ author = {Leshed, Gilly and Haber, Eben M. and Matthews, Tara and Lau, Tessa},
+ title = {CoScripter: Automating \& Sharing How-to Knowledge in the Enterprise},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '08},
+ year = {2008},
+ isbn = {978-1-60558-011-1},
+ location = {Florence, Italy},
+ pages = {1719--1728},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1357054.1357323},
+ doi = {10.1145/1357054.1357323},
+ acmid = {1357323},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {automation, knowledge sharing, procedural knowledge, programming-by-demonstration, scripting, user study, wiki},
+}
+
