--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -2078,6 +2078,14 @@ keywords = "Survey "
 }
 
 
+@misc{RISE,
+  author = {Avila, Damian},
+  title = {RISE: Reveal.js - Jupyter/IPython Slideshow Extension},
+  howpublished = {\url{https://damianavila.github.io/RISE/index.html}},
+  year = 2017,
+}
+
+
 @misc{Glitch,
   title = {Glitch is the friendly community where you'll build the app
   of your dreams},
@@ -2327,3 +2335,222 @@ keywords = "Survey "
  keywords = {automation, knowledge sharing, procedural knowledge, programming-by-demonstration, scripting, user study, wiki},
 }
 
+@article{Blackwell2014,
+  author =    {Alan Blackwell and Alex McLean and James Noble and Julian Rohrhuber},
+  title =    {{Collaboration and learning through live coding (Dagstuhl Seminar 13382)}},
+  pages =    {130--168},
+  journal =    {Dagstuhl Reports},
+  ISSN =    {2192-5283},
+  year =    {2014},
+  volume =    {3},
+  number =    {9},
+  editor =    {Alan Blackwell and Alex McLean and James Noble and Julian Rohrhuber},
+  publisher =    {Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik},
+  address =    {Dagstuhl, Germany},
+  URL =        {http://drops.dagstuhl.de/opus/volltexte/2014/4420},
+  URN =        {urn:nbn:de:0030-drops-44205},
+  doi =        {10.4230/DagRep.3.9.130},
+  annote =    {Keywords: Live coding, Collaboration, Learning, Improvised interactive programming, Computer music, Algorithmic composition, TOPLAP}
+}
+
+@inproceedings{Barker2005,
+ author = {Barker, Lecia J. and Garvin-Doxas, Kathy and Roberts, Eric},
+ title = {What Can Computer Science Learn from a Fine Arts Approach to Teaching?},
+ booktitle = {Proceedings of the 36th SIGCSE Technical Symposium on Computer Science Education},
+ series = {SIGCSE '05},
+ year = {2005},
+ isbn = {1-58113-997-7},
+ location = {St. Louis, Missouri, USA},
+ pages = {421--425},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/1047344.1047482},
+ doi = {10.1145/1047344.1047482},
+ acmid = {1047482},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {CS education research, classroom management, gender issues, pedagogy},
+}
+
+@article{Paxton2002,
+ author = {Paxton, John},
+ title = {Live Programming As a Lecture Technique},
+ journal = {J. Comput. Sci. Coll.},
+ issue_date = {December 2002},
+ volume = {18},
+ number = {2},
+ month = dec,
+ year = {2002},
+ issn = {1937-4771},
+ pages = {51--56},
+ numpages = {6},
+ url = {http://dl.acm.org/citation.cfm?id=771322.771332},
+ acmid = {771332},
+ publisher = {Consortium for Computing Sciences in Colleges},
+ address = {USA},
+}
+
+@inproceedings{Gaspar2007,
+ author = {Gaspar, Alessio and Langevin, Sarah},
+ title = {Restoring "Coding with Intention" in Introductory Programming Courses},
+ booktitle = {Proceedings of the 8th ACM SIGITE Conference on Information Technology Education},
+ series = {SIGITE '07},
+ year = {2007},
+ isbn = {978-1-59593-920-3},
+ location = {Destin, Florida, USA},
+ pages = {91--98},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1324302.1324323},
+ doi = {10.1145/1324302.1324323},
+ acmid = {1324323},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {CS-1, active learning, constructive alignment theory, evolutionary computation, evolutionary epistemology, introductory programming courses, live coding, test harness},
+}
+
+@inproceedings{Rubin2013,
+ author = {Rubin, Marc J.},
+ title = {The Effectiveness of Live-coding to Teach Introductory Programming},
+ booktitle = {Proceeding of the 44th ACM Technical Symposium on Computer Science Education},
+ series = {SIGCSE '13},
+ year = {2013},
+ isbn = {978-1-4503-1868-6},
+ location = {Denver, Colorado, USA},
+ pages = {651--656},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2445196.2445388},
+ doi = {10.1145/2445196.2445388},
+ acmid = {2445388},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {introductory, live-coding, pedagogy, programming},
+}
+
+@article{Shannon2015,
+ author = {Shannon, Amy and Summet, Valerie},
+ title = {Live Coding in Introductory Computer Science Courses},
+ journal = {J. Comput. Sci. Coll.},
+ issue_date = {December 2015},
+ volume = {31},
+ number = {2},
+ month = dec,
+ year = {2015},
+ issn = {1937-4771},
+ pages = {158--164},
+ numpages = {7},
+ url = {http://dl.acm.org/citation.cfm?id=2831432.2831457},
+ acmid = {2831457},
+ publisher = {Consortium for Computing Sciences in Colleges},
+ address = {USA},
+}
+
+@article{Edge2016,
+ author = {Edge, Darren and Yang, Xi and Kotturi, Yasmine and Wang, Shuoping and Feng, Dan and Lee, Bongshin and Drucker, Steven},
+ title = {SlideSpace: Heuristic Design of a Hybrid Presentation Medium},
+ journal = {ACM Trans. Comput.-Hum. Interact.},
+ issue_date = {July 2016},
+ volume = {23},
+ number = {3},
+ month = jun,
+ year = {2016},
+ issn = {1073-0516},
+ pages = {16:1--16:30},
+ articleno = {16},
+ numpages = {30},
+ url = {http://doi.acm.org/10.1145/2898970},
+ doi = {10.1145/2898970},
+ acmid = {2898970},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Slides, canvas presentations, design automation, heuristic design},
+}
+
+@inproceedings{Pschetz2014,
+ author = {Pschetz, Larissa and Yatani, Koji and Edge, Darren},
+ title = {TurningPoint: Narrative-driven Presentation Planning},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '14},
+ year = {2014},
+ isbn = {978-1-4503-2473-1},
+ location = {Toronto, Ontario, Canada},
+ pages = {1591--1594},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/2556288.2557389},
+ doi = {10.1145/2556288.2557389},
+ acmid = {2557389},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {narrative templates, slide presentations, storytelling},
+}
+
+@inproceedings{Edge2015,
+ author = {Edge, Darren and Gulwani, Sumit and Milic-Frayling, Natasa and Raza, Mohammad and Adhitya Saputra, Reza and Wang, Chao and Yatani, Koji},
+ title = {Mixed-Initiative Approaches to Global Editing in Slideware},
+ booktitle = {Proceedings of the 33rd Annual ACM Conference on Human Factors in Computing Systems},
+ series = {CHI '15},
+ year = {2015},
+ isbn = {978-1-4503-3145-6},
+ location = {Seoul, Republic of Korea},
+ pages = {3503--3512},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2702123.2702551},
+ doi = {10.1145/2702123.2702551},
+ acmid = {2702551},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {layout editing, least-general generalization, presentations, programming by example, snapping, visual consistency},
+}
+
+@inproceedings{Trinh2014,
+ author = {Trinh, Ha and Yatani, Koji and Edge, Darren},
+ title = {PitchPerfect: Integrated Rehearsal Environment for Structured Presentation Preparation},
+ booktitle = {Proceedings of the 32Nd Annual ACM Conference on Human Factors in Computing Systems},
+ series = {CHI '14},
+ year = {2014},
+ isbn = {978-1-4503-2473-1},
+ location = {Toronto, Ontario, Canada},
+ pages = {1571--1580},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2556288.2557286},
+ doi = {10.1145/2556288.2557286},
+ acmid = {2557286},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {powerpoint, presentation rehearsal, slideware},
+}
+
+@inproceedings{Lichtschlag2009,
+ author = {Lichtschlag, Leonhard and Karrer, Thorsten and Borchers, Jan},
+ title = {Fly: A Tool to Author Planar Presentations},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '09},
+ year = {2009},
+ isbn = {978-1-60558-246-7},
+ location = {Boston, MA, USA},
+ pages = {547--556},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1518701.1518786},
+ doi = {10.1145/1518701.1518786},
+ acmid = {1518786},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {authoring, planar user interfaces, presentation software, slideware, zoomable user interfaces},
+}
+
+@article{Good2002,
+ author = {Good, Lance and Bederson, Benjamin B.},
+ title = {Zoomable User Interfaces As a Medium for Slide Show Presentations},
+ journal = {Information Visualization},
+ issue_date = {March 2002},
+ volume = {1},
+ number = {1},
+ month = mar,
+ year = {2002},
+ issn = {1473-8716},
+ pages = {35--49},
+ numpages = {15},
+ url = {http://dx.doi.org/10.1057/palgrave/ivs/9500004},
+ doi = {10.1057/palgrave/ivs/9500004},
+ acmid = {941236},
+ publisher = {Palgrave Macmillan},
+ keywords = {Jazz, Powerpoint, presentations, spatial hypertext, zoomable user interfaces (ZUIs)},
+}
