--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -2554,3 +2554,156 @@ keywords = "Survey "
  publisher = {Palgrave Macmillan},
  keywords = {Jazz, Powerpoint, presentations, spatial hypertext, zoomable user interfaces (ZUIs)},
 }
+
+@inproceedings{Cantrill2004,
+ author = {Cantrill, Bryan M. and Shapiro, Michael W. and Leventhal, Adam H.},
+ title = {Dynamic Instrumentation of Production Systems},
+ booktitle = {Proceedings of the Annual Conference on USENIX Annual Technical Conference},
+ series = {ATEC '04},
+ year = {2004},
+ location = {Boston, MA},
+ url = {http://dl.acm.org/citation.cfm?id=1247415.1247417},
+ acmid = {1247417},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+}
+
+@misc{ffmpeg,
+  title = {FFmpeg: A complete, cross-platform solution to record, convert and stream audio and video.},
+  howpublished = {\url{https://ffmpeg.org/}},
+  year = 2017,
+}
+
+@misc{AutodeskScreencast,
+  title = {Autodesk Screencast: A simple way to share what you know},
+  howpublished = {\url{https://knowledge.autodesk.com/community/screencast}},
+  year = 2017,
+}
+
+@inproceedings{Fernquist2011,
+ author = {Fernquist, Jennifer and Grossman, Tovi and Fitzmaurice, George},
+ title = {Sketch-sketch Revolution: An Engaging Tutorial System for Guided Sketching and Application Learning},
+ booktitle = {Proceedings of the 24th Annual ACM Symposium on User Interface Software and Technology},
+ series = {UIST '11},
+ year = {2011},
+ isbn = {978-1-4503-0716-1},
+ location = {Santa Barbara, California, USA},
+ pages = {373--382},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2047196.2047245},
+ doi = {10.1145/2047196.2047245},
+ acmid = {2047245},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {engagement, learning, sketching, tutorials},
+}
+
+@inproceedings{Hill1992,
+ author = {Hill, William C. and Hollan, James D. and Wroblewski, Dave and McCandless, Tim},
+ title = {Edit Wear and Read Wear},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '92},
+ year = {1992},
+ isbn = {0-89791-513-5},
+ location = {Monterey, California, USA},
+ pages = {3--9},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/142750.142751},
+ doi = {10.1145/142750.142751},
+ acmid = {142751},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {graphical user interfaces, informational physics, interface mechanisms, professional work, reflective practitioner},
+}
+
+@article{Goldman2009,
+ author = {Goldman, Max and Miller, Robert C.},
+ title = {Codetrail: Connecting Source Code and Web Resources},
+ journal = {J. Vis. Lang. Comput.},
+ issue_date = {August, 2009},
+ volume = {20},
+ number = {4},
+ month = aug,
+ year = {2009},
+ issn = {1045-926X},
+ pages = {223--235},
+ numpages = {13},
+ url = {http://dx.doi.org/10.1016/j.jvlc.2009.04.003},
+ doi = {10.1016/j.jvlc.2009.04.003},
+ acmid = {1568906},
+ publisher = {Academic Press, Inc.},
+ address = {Orlando, FL, USA},
+ keywords = {Development environment, Human-computer interaction, Software development, Web browser},
+}
+
+@inproceedings{Chilana2012,
+ author = {Chilana, Parmit K. and Ko, Andrew J. and Wobbrock, Jacob O.},
+ title = {LemonAid: Selection-based Crowdsourced Contextual Help for Web Applications},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '12},
+ year = {2012},
+ isbn = {978-1-4503-1015-4},
+ location = {Austin, Texas, USA},
+ pages = {1549--1558},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2207676.2208620},
+ doi = {10.1145/2207676.2208620},
+ acmid = {2208620},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {contextual help, crowdsourced help, software support},
+}
+
+@inproceedings{Bunt2014,
+ author = {Bunt, Andrea and Dubois, Patrick and Lafreniere, Ben and Terry, Michael A. and Cormack, David T.},
+ title = {TaggedComments: Promoting and Integrating User Comments in Online Application Tutorials},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '14},
+ year = {2014},
+ isbn = {978-1-4503-2473-1},
+ location = {Toronto, Ontario, Canada},
+ pages = {4037--4046},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2556288.2557118},
+ doi = {10.1145/2556288.2557118},
+ acmid = {2557118},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {feature-rich software, tagging, web-based tutorials},
+}
+
+@inproceedings{Alexander2009,
+ author = {Alexander, Jason and Cockburn, Andy and Fitchett, Stephen and Gutwin, Carl and Greenberg, Saul},
+ title = {Revisiting Read Wear: Analysis, Design, and Evaluation of a Footprints Scrollbar},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '09},
+ year = {2009},
+ isbn = {978-1-60558-246-7},
+ location = {Boston, MA, USA},
+ pages = {1665--1674},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1518701.1518957},
+ doi = {10.1145/1518701.1518957},
+ acmid = {1518957},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {document revisitation, read wear, scrolling},
+}
+
+@inproceedings{Matejka2013patina,
+ author = {Matejka, Justin and Grossman, Tovi and Fitzmaurice, George},
+ title = {Patina: Dynamic Heatmaps for Visualizing Application Usage},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '13},
+ year = {2013},
+ isbn = {978-1-4503-1899-0},
+ location = {Paris, France},
+ pages = {3227--3236},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2470654.2466442},
+ doi = {10.1145/2470654.2466442},
+ acmid = {2466442},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {social learning, visualization},
+}
